--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,16 +1,22 @@
 Package: semlbci
-Title: What the Package Does (One Line, Title Case)
-Version: 0.0.0.9000
+Title: Likelihood Based Confidence Interval for SEM
+Version: 0.0.0.1
 Authors@R: 
-    person(given = "First",
-           family = "Last",
+    person(given = "Shu Fai",
+           family = "Cheung",
            role = c("aut", "cre"),
-           email = "first.last@example.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+           email = "shufai.cheung@gmail.com",
+           comment = c(ORCID = "0000-0002-9871-9448"))
+Description: Find the likelihood based confidence intervals for parameters in structural equation modeling.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Suggests: 
+    testthat
+Depends: 
+    R (>= 4.0.0)
+Imports: 
+    lavaan,
+    nloptr
