--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,9 @@ export(ci_bound_i)
 export(ci_i)
 export(find_free)
 export(find_variance_in_free)
+export(get_lhs_op_rhs)
 export(semlbci)
 export(set_constraint)
 export(set_start)
 export(syntax_to_i)
+export(update_model)
