--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: semlbci
 Title: Likelihood Based Confidence Interval for SEM
-Version: 0.0.0.4
+Version: 0.0.0.5
 Authors@R: 
     person(given = "Shu Fai",
            family = "Cheung",
@@ -15,7 +15,9 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Suggests: 
     testthat,
-    OpenMx
+    OpenMx,
+    knitr,
+    rmarkdown
 Depends: 
     R (>= 4.0.0)
 Imports: 
@@ -23,3 +25,4 @@ Imports:
     nloptr,
     numDeriv,
     stats
+VignetteBuilder: knitr
