--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,3 +26,6 @@ Imports:
     numDeriv,
     stats
 VignetteBuilder: knitr
+Config/testthat/parallel: true
+Config/testthat/edition: 3
+Config/testthat/start-first: ci_bound_i_standardized_*, ci_bound_i_standardized_derived_pars_*
