--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,19 @@
 Package: semlbci
 Title: Likelihood Based Confidence Interval for SEM
 Version: 0.0.0.9
-Authors@R: 
-    person(given = "Shu Fai",
+ Authors@R: 
+    c(
+      person(given = "Shu Fai",
            family = "Cheung",
            role = c("aut", "cre"),
            email = "shufai.cheung@gmail.com",
            comment = c(ORCID = "0000-0002-9871-9448"))
+      person(given = "Ivan Jacob Agaloos",
+           family = "Pesigan",
+           role = "ctb",
+           email = "i.j.a.pesigan@connect.um.edu.mo",
+           comment = c(ORCID = "0000-0003-4818-8420"))
+    )
 Description: Find the likelihood based confidence intervals for parameters in structural equation modeling.
 License: GPL-3
 Encoding: UTF-8
