Add pbapply to Suggests and replace require by requireNamespace

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,8 @@ Suggests:
     testthat (>= 3.0.0),
     OpenMx,
     knitr,
-    rmarkdown
+    rmarkdown,
+    pbapply
 Depends: 
     R (>= 4.0.0)
 Imports: 
