Add get_std such that scaling_factor does not affect the parent environment
All tests passed. All rb tests passed. devtools::check() passed.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(print,semlbci)
 export(check_sem_out)
 export(ci_bound_wn_i)
 export(ci_i)
+export(get_std)
 export(semlbci)
 export(set_constraint)
 export(syntax_to_i)
