--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,7 +31,8 @@ Imports:
     lavaan,
     nloptr,
     stats,
-    utils
+    utils,
+    MASS
 VignetteBuilder: knitr
 Config/testthat/parallel: true
 Config/testthat/edition: 3
