Fix documentation to pass check
Check passed.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: semlbci
 Title: Likelihood Based Confidence Interval for SEM
 Version: 0.0.0.10
-Authors@R: 
+Authors@R:
     c(
       person(given = "Shu Fai",
            family = "Cheung",
@@ -20,19 +20,21 @@ Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.0
-Suggests: 
+Suggests:
     testthat (>= 3.0.0),
     knitr,
     rmarkdown,
     pbapply
-Depends: 
+Depends:
     R (>= 4.0.0)
-Imports: 
+Imports:
     lavaan,
     nloptr,
     stats,
     utils,
-    MASS
+    MASS,
+    ggplot2,
+    ggrepel
 VignetteBuilder: knitr
 Config/testthat/parallel: true
 Config/testthat/edition: 3
