--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,11 @@ S3method(print,semlbci)
 export(check_sem_out)
 export(ci_bound_wn_i)
 export(ci_i_one)
+export(loglike_compare)
+export(loglike_point)
+export(loglike_quad_point)
+export(loglike_quad_range)
+export(loglike_range)
 export(semlbci)
 export(set_constraint)
 export(syntax_to_i)
