--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,10 @@ Authors@R:
            email = "i.j.a.pesigan@connect.um.edu.mo",
            comment = c(ORCID = "0000-0003-4818-8420"))
     )
-Description: Find the likelihood based confidence intervals for parameters in structural equation modeling.
+Description: Find the likelihood based confidence intervals (LBCIs) for
+    parameters in structural equation modeling, including standardized
+    estimates such as correlatiosn and user-defined parameters such as
+    indirect effect. Also support robust LBCIs.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
