--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ S3method(print,semlbci)
 export(check_sem_out)
 export(ci_bound_wn_i)
 export(ci_i_one)
+export(get_cibound)
 export(loglike_compare)
 export(loglike_point)
 export(loglike_quad_point)
