--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,17 +2,20 @@
 
 S3method(confint,semlbci)
 S3method(plot,loglike_compare)
+S3method(print,ci_order)
 S3method(print,cibound)
 S3method(print,semlbci)
 export(check_sem_out)
 export(ci_bound_wn_i)
 export(ci_i_one)
+export(ci_order)
 export(get_cibound)
 export(loglike_compare)
 export(loglike_point)
 export(loglike_quad_point)
 export(loglike_quad_range)
 export(loglike_range)
+export(nearby_levels)
 export(semlbci)
 export(set_constraint)
 export(syntax_to_i)
