--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: semlbci
 Title: Likelihood Based Confidence Interval for SEM
-Version: 0.10.0.9011
+Version: 0.10.0.12
 Authors@R:
     c(
       person(given = "Shu Fai",
@@ -14,10 +14,12 @@ Authors@R:
            email = "r.jeksterslab@gmail.com",
            comment = c(ORCID = "0000-0003-4818-8420"))
     )
-Description: Find the likelihood based confidence intervals (LBCIs) for
-    parameters in structural equation modeling, including standardized
-    estimates such as correlations and user-defined parameters such as
-    indirect effect. Also support robust LBCIs.
+Description: Functions for forming the likelihood-based
+    confidence intervals (LBCIs) for parameters in
+    structural equation modeling. Currently implements the
+    algorithm illustrated by Pek and Wu (2018)
+    <doi:10.1037/met0000163>, and supports the robust LBCI
+    proposed by Falk (2018) <doi:10.1080/10705511.2017.1367254>.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
