--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: semlbci
 Title: Likelihood Based Confidence Interval for SEM
-Version: 0.10.0.13
+Version: 0.10.0.14
 Authors@R:
     c(
       person(given = "Shu Fai",
@@ -16,7 +16,8 @@ Authors@R:
     )
 Description: Functions for forming the likelihood-based
     confidence intervals (LBCIs) for parameters in
-    structural equation modeling. Currently implements the
+    structural equation modeling, introduced in
+    Cheung and Pesigan (2023). Currently implements the
     algorithm illustrated by Pek and Wu (2018)
     <doi:10.1037/met0000163>, and supports the robust LBCI
     proposed by Falk (2018) <doi:10.1080/10705511.2017.1367254>.
