Fix the label issue
Also add nd_theta and nd_pvalue, use plotmath, and add rlang such that there is no need for setting globalvariables. Check passed.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,8 @@ Imports:
     utils,
     MASS,
     ggplot2,
-    ggrepel
+    ggrepel,
+    rlang
 VignetteBuilder: knitr
 Config/testthat/parallel: true
 Config/testthat/edition: 3
