--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,12 +1,19 @@
 destination: docs
 
 url: https://sfcheung.github.io/semlbci/
+
 template:
   bootstrap: 5
   bootswatch: pulse
+  theme: a11y-light
   bslib:
     pkgdown-nav-height: 100px
-  theme: arrow-light
+    bg: "#DFDFDF"
+    fg: "#000000"
+    # primary: "#000055"
+    base_font: {google: "Inter"}
+    heading_font: {google: "Inter"}
+    code_font: {google: "Martian Mono"}
 
 navbar:
   structure:
