Change technical_workflow as an article
Checks passed.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -30,7 +30,7 @@ articles:
   navbar: ~
   desc: For advanced users and developers
   contents:
-  - technical_workflow
+  - articles/technical_workflow
   - technical_searching_one_bound
 
 reference:
