--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: semlbci
 Title: Likelihood-Based Confidence Interval in Structural Equation Models
-Version: 0.10.0.30
+Version: 0.10.0.31
 Authors@R:
     c(
       person(given = "Shu Fai",
@@ -30,8 +30,7 @@ RoxygenNote: 7.2.3
 Suggests:
     testthat (>= 3.0.0),
     knitr,
-    rmarkdown,
-    pbapply
+    rmarkdown
 Depends:
     R (>= 4.0.0)
 Imports:
@@ -42,7 +41,8 @@ Imports:
     MASS,
     ggplot2,
     ggrepel,
-    rlang
+    rlang,
+    pbapply
 VignetteBuilder: knitr
 Config/testthat/parallel: true
 Config/testthat/edition: 3
