--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,13 +14,13 @@ Authors@R:
            email = "r.jeksterslab@gmail.com",
            comment = c(ORCID = "0000-0003-4818-8420"))
     )
-Description: Functions for forming the likelihood-based
-    confidence intervals (LBCIs) for parameters in
-    structural equation modeling, introduced in
-    Cheung and Pesigan (2023) <doi:10.1080/10705511.2023.2183860>.
-    Currently implements the algorithm illustrated by
-    Pek and Wu (2018) <doi:10.1037/met0000163>, and supports
-    the robust LBCI proposed by Falk (2018)
+Description: Forms likelihood-based confidence intervals
+    (LBCIs) for parameters in structural equation modeling,
+    introduced in Cheung and Pesigan (2023)
+    <doi:10.1080/10705511.2023.2183860>. Currently
+    implements the algorithm illustrated by Pek and Wu
+    (2018) <doi:10.1037/met0000163>, and supports the robust
+    LBCI proposed by Falk (2018)
     <doi:10.1080/10705511.2017.1367254>.
 License: GPL-3
 Encoding: UTF-8
