--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -14,6 +14,8 @@ template:
     base_font: {google: "Inter"}
     heading_font: {google: "Inter"}
     code_font: {google: "Martian Mono"}
+  includes:
+    in_header: <meta name="google-site-verification" content="0VLBmFnW_UJFI-7gXnORPBsWxqZwmzuGpK-TeVRLBjQ" />
 
 navbar:
   structure:
