Update doc and export ci_bound_ur
Tests passed

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ S3method(print,ci_order)
 S3method(print,cibound)
 S3method(print,semlbci)
 export(check_sem_out)
+export(ci_bound_ur)
 export(ci_bound_ur_i)
 export(ci_bound_wn_i)
 export(ci_i_one)
