Export gen_userp and fix the examples and docs
Tests, checks, and build_site() passed.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -72,6 +72,7 @@ reference:
   - set_constraint
   - print.cibound
   - gen_sem_out_userp
+  - gen_userp
 - title: Datasets
   desc: Datasets used in examples.
 - contents:
