--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(ci_bound_wn_i)
 export(ci_i_one)
 export(ci_order)
 export(gen_sem_out_userp)
+export(gen_userp)
 export(get_cibound)
 export(loglike_compare)
 export(loglike_point)
