Update the example of ci_bound_ur
Tests, checks, and build_site() passed.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(ci_bound_ur_i)
 export(ci_bound_wn_i)
 export(ci_i_one)
 export(ci_order)
+export(gen_est_i)
 export(gen_sem_out_userp)
 export(gen_userp)
 export(get_cibound)
