--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(gen_est_i)
 export(gen_sem_out_userp)
 export(gen_userp)
 export(get_cibound)
+export(get_cibound_status_not_0)
 export(loglike_compare)
 export(loglike_point)
 export(loglike_quad_point)
