Add loglike with ur
Test and checks passed.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,15 @@ export(gen_userp)
 export(get_cibound)
 export(get_cibound_status_not_0)
 export(loglike_compare)
+export(loglike_compare_ur)
 export(loglike_point)
+export(loglike_point_ur)
 export(loglike_quad_point)
+export(loglike_quad_point_ur)
 export(loglike_quad_range)
+export(loglike_quad_range_ur)
 export(loglike_range)
+export(loglike_range_ur)
 export(nearby_levels)
 export(semlbci)
 export(set_constraint)
